@@ -16,6 +16,30 @@ class abcRender extends SrNotationBase
                 implements SrNotationInterface
 {
 
+protected static $notation_data = array (
+	'name'        => 'ABC',
+	'url'         => 'http://scorerender.abelcheung.org/demo/demo-abc/',
+	'classname'   => 'abcRender',
+	'progs'       => array (
+		'ABCM2PS_BIN' => array (
+			'prog_name'   => 'abcm2ps',
+			'type'        => 'prog',
+			'value'       => '',
+			'test_arg'    => '-V',
+			'test_output' => '/^abcm2ps-([\d.]+)/',
+			'error_code'  => 'abcm2ps_bin_problem',
+		),
+		'ABC2MIDI_BIN' => array (
+			'prog_name'   => 'abc2midi',
+			'type'        => 'midiprog',
+			'value'       => '',
+			'test_arg'    => '-h',
+			'test_output' => '/^abc2midi version ([\d.]+)/',
+			'error_code'  => 'abc2midi_bin_problem',
+		),
+	),
+);
+
 /**
  * Refer to {@link SrNotationBase::set_img_width() parent method}
  * for more detail.
@@ -87,23 +111,22 @@ protected function generate_midi ($input_file, $final_midi)
  */
 public function is_notation_usable ($errmsgs = null, $opt)
 {
-	global $notations;
 	static $ok;
 
 	if ( !isset ($ok) )
 	{
 		$ok = true;
-		foreach ($notations['abc']['progs'] as $setting_name => $program)
+		foreach (self::$notation_data['progs'] as $setting_name => $progdata)
 		{
-			if ( 'prog' !== $program['type'] ) continue;
+			if ( 'prog' !== $progdata['type'] ) continue;
 
 			if ( empty ($opt[$setting_name]) )
 			{
 				$ok = false;
 				break;
 			}
-			$result = parent::is_prog_usable ( $program['test_output'],
-					$opt[$setting_name], $program['test_arg']);
+			$result = parent::is_prog_usable ( $progdata['test_output'],
+					$opt[$setting_name], $progdata['test_arg']);
 
 			if ( is_wp_error ($result) || !$result )
 			{
@@ -113,7 +136,7 @@ public function is_notation_usable ($errmsgs = null, $opt)
 		}
 
 		if (!$ok)
-			if ( !is_null ($errmsgs) ) $errmsgs[] = $program['error_code'];
+			if ( !is_null ($errmsgs) ) $errmsgs[] = $progdata['error_code'];
 	}
 
 	if ( isset ($this) && get_class ($this) == __CLASS__ )
@@ -126,15 +149,13 @@ public function is_notation_usable ($errmsgs = null, $opt)
  */
 public static function define_admin_messages ($adm_msgs)
 {
-	global $notations;
-
 	$adm_msgs['abcm2ps_bin_problem'] = array (
 		'level' => MSG_WARNING,
-		'content' => sprintf (__('%s notation support may not work, because dependent program failed checking.', TEXTDOMAIN), $notations['abc']['name'])
+		'content' => sprintf (__('%s notation support may not work, because dependent program failed checking.', TEXTDOMAIN), self::$notation_data['name'])
 	);
 	$adm_msgs['abc2midi_bin_problem'] = array (
 		'level' => MSG_WARNING,
-		'content' => sprintf (__('MIDI generation for %s notation may not work, because dependent program failed checking.', TEXTDOMAIN), $notations['abc']['name'])
+		'content' => sprintf (__('MIDI generation for %s notation may not work, because dependent program failed checking.', TEXTDOMAIN), self::$notation_data['name'])
 	);
 }
 
@@ -144,11 +165,9 @@ public static function define_admin_messages ($adm_msgs)
  */
 public static function program_setting_entry ($output)
 {
-	global $notations;
-
-	foreach ($notations['abc']['progs'] as $setting_name => $program)
+	foreach (self::$notation_data['progs'] as $setting_name => $progdata)
 		$output .= parent::program_setting_entry (
-			$program['prog_name'], $setting_name);
+			$progdata['prog_name'], $setting_name);
 	return $output;
 }
 
@@ -158,10 +177,8 @@ public static function program_setting_entry ($output)
  */
 public static function define_setting_type ($settings)
 {
-	global $notations;
-
-	foreach ($notations['abc']['progs'] as $key => $value)
-		$settings[$key] = $value;
+	foreach (self::$notation_data['progs'] as $setting_name => $progdata )
+		$settings[$setting_name] = $progdata;
 }
 
 /**
@@ -170,9 +187,7 @@ public static function define_setting_type ($settings)
  */
 public static function define_setting_value ($settings)
 {
-	global $notations;
-
-	foreach ( $notations['abc']['progs'] as $setting_name => $progdata )
+	foreach ( self::$notation_data['progs'] as $setting_name => $progdata )
 	{
 		$binary_name = $progdata['prog_name'];
 		if ( is_windows() ) $binary_name .= '.exe';
