@@ -18,6 +18,24 @@ class lilypondRender extends SrNotationBase
 
 protected $lilypond_ver = '';
 
+protected static $notation_data = array (
+	'name'        => 'LilyPond',
+	'url'         => 'http://scorerender.abelcheung.org/demo/demo-lilypond/',
+	'classname'   => 'lilypondRender',
+	'progs'       => array (
+		'LILYPOND_BIN' => array (
+			'prog_name'   => 'lilypond',
+			'type'        => 'prog',
+			'value'       => '',
+			'test_arg'    => array ('--version'),
+			'test_output' => '/^GNU LilyPond ([\d.-]+)/',
+			'min_version' => '2.8.1',
+			'error_code'  => 'lilypond_bin_problem',
+		),
+	),
+);
+
+
 /**
  * Refer to {@link SrNotationInterface::get_music_fragment() interface method}
  * for more detail.
@@ -92,15 +110,14 @@ protected function conversion_step2 ($intermediate_image, $final_image)
  */
 public function is_notation_usable ($errmsgs = null, $opt)
 {
-	global $notations;
 	static $ok;
 
 	if ( !isset ($ok) )
 	{
 		$ok = true;
-		foreach ($notations['lilypond']['progs'] as $setting_name => $program)
+		foreach (self::$notation_data['progs'] as $setting_name => $progdata)
 		{
-			if ( 'prog' !== $program['type'] ) continue;
+			if ( 'prog' !== $progdata['type'] ) continue;
 
 			if ( empty ($opt[$setting_name]) )
 			{
@@ -108,8 +125,8 @@ public function is_notation_usable ($errmsgs = null, $opt)
 				break;
 			}
 			$lily_ver = '';
-			$result = parent::is_prog_usable ( $program['test_output'], $opt[$setting_name],
-					$program['test_arg'], $program['min_version'], 1, $lily_ver );
+			$result = parent::is_prog_usable ( $progdata['test_output'], $opt[$setting_name],
+					$progdata['test_arg'], $progdata['min_version'], 1, $lily_ver );
 			if ( is_wp_error ($result) || !$result )
 			{
 				$ok = false;
@@ -121,7 +138,7 @@ public function is_notation_usable ($errmsgs = null, $opt)
 		}
 
 		if (!$ok)
-			if ( !is_null ($errmsgs) ) $errmsgs[] = $program['error_code'];
+			if ( !is_null ($errmsgs) ) $errmsgs[] = $progdata['error_code'];
 	}
 
 	if ( isset ($this) && get_class ($this) == __CLASS__ )
@@ -134,11 +151,9 @@ public function is_notation_usable ($errmsgs = null, $opt)
  */
 public static function define_admin_messages ($adm_msgs)
 {
-	global $notations;
-
 	$adm_msgs['lilypond_bin_problem'] = array (
 		'level' => MSG_WARNING,
-		'content' => sprintf (__('%s notation support may not work, because dependent program failed checking.', TEXTDOMAIN), $notations['lilypond']['name'])
+		'content' => sprintf (__('%s notation support may not work, because dependent program failed checking.', TEXTDOMAIN), self::$notation_data['name'])
 	);
 }
 
@@ -148,11 +163,9 @@ public static function define_admin_messages ($adm_msgs)
  */
 public static function program_setting_entry ($output)
 {
-	global $notations;
-
-	foreach ($notations['lilypond']['progs'] as $setting_name => $program)
+	foreach (self::$notation_data['progs'] as $setting_name => $progdata)
 		$output .= parent::program_setting_entry (
-			$program['prog_name'], $setting_name);
+			$progdata['prog_name'], $setting_name);
 	return $output;
 }
 
@@ -162,10 +175,8 @@ public static function program_setting_entry ($output)
  */
 public static function define_setting_type ($settings)
 {
-	global $notations;
-
-	foreach ($notations['lilypond']['progs'] as $key => $value)
-		$settings[$key] = $value;
+	foreach (self::$notation_data['progs'] as $setting_name => $progdata )
+		$settings[$setting_name] = $progdata;
 }
 
 /**
@@ -174,9 +185,7 @@ public static function define_setting_type ($settings)
  */
 public static function define_setting_value ($settings)
 {
-	global $notations;
-
-	foreach ( $notations['lilypond']['progs'] as $setting_name => $progdata )
+	foreach ( self::$notation_data['progs'] as $setting_name => $progdata )
 	{
 		$binary_name = $progdata['prog_name'];
 		if ( is_windows() ) $binary_name .= '.exe';
