@@ -16,6 +16,23 @@ class pmwRender extends SrNotationBase
                 implements SrNotationInterface
 {
 
+protected static $notation_data = array (
+	'name'        => "Philip's Music Writer",
+	'url'         => 'http://scorerender.abelcheung.org/demo/demo-pmw/',
+	'classname'   => 'pmwRender',
+	'progs'       => array (
+		'PMW_BIN' => array (
+			'prog_name' => 'pmw',
+			'type'      => 'prog',
+			'value'     => '',
+			'test_arg'  => '-V',
+			'test_output' => '/^PMW version ([\d.-]+)/',
+			'error_code'  => 'pmw_bin_problem',
+		),
+	),
+);
+
+
 /**
  * Refer to {@link SrNotationInterface::get_music_fragment() interface method}
  * for more detail.
@@ -80,23 +97,22 @@ protected function conversion_step2 ($intermediate_image, $final_image)
  */
 public function is_notation_usable ($errmsgs = null, $opt)
 {
-	global $notations;
 	static $ok;
 
 	if ( !isset ($ok) )
 	{
 		$ok = true;
-		foreach ($notations['pmw']['progs'] as $setting_name => $program)
+		foreach (self::$notation_data['progs'] as $setting_name => $progdata)
 		{
-			if ( 'prog' !== $program['type'] ) continue;
+			if ( 'prog' !== $progdata['type'] ) continue;
 
 			if ( empty ($opt[$setting_name]) )
 			{
 				$ok = false;
 				break;
 			}
-			$result = parent::is_prog_usable ( $program['test_output'],
-					$opt[$setting_name], $program['test_arg']);
+			$result = parent::is_prog_usable ( $progdata['test_output'],
+					$opt[$setting_name], $progdata['test_arg']);
 
 			if ( is_wp_error ($result) || !$result )
 			{
@@ -106,7 +122,7 @@ public function is_notation_usable ($errmsgs = null, $opt)
 		}
 
 		if (!$ok)
-		       if ( !is_null ($errmsgs) ) $errmsgs[] = $program['error_code'];
+		       if ( !is_null ($errmsgs) ) $errmsgs[] = $progdata['error_code'];
 	}
 
 	if ( isset ($this) && get_class ($this) == __CLASS__ )
@@ -119,11 +135,9 @@ public function is_notation_usable ($errmsgs = null, $opt)
  */
 public static function define_admin_messages ($adm_msgs)
 {
-	global $notations;
-
 	$adm_msgs['pmw_bin_problem'] = array (
 		'level' => MSG_WARNING,
-		'content' => sprintf (__('%s notation support may not work, because dependent program failed checking.', TEXTDOMAIN), $notations['pmw']['name'])
+		'content' => sprintf (__('%s notation support may not work, because dependent program failed checking.', TEXTDOMAIN), self::$notation_data['name'])
 	);
 }
 
@@ -133,11 +147,9 @@ public static function define_admin_messages ($adm_msgs)
  */
 public static function program_setting_entry ($output)
 {
-	global $notations;
-
-	foreach ($notations['pmw']['progs'] as $setting_name => $program)
+	foreach (self::$notation_data['progs'] as $setting_name => $progdata)
 		$output .= parent::program_setting_entry (
-			$program['prog_name'], $setting_name);
+			$progdata['prog_name'], $setting_name);
 	return $output;
 }
 
@@ -147,10 +159,8 @@ public static function program_setting_entry ($output)
  */
 public static function define_setting_type ($settings)
 {
-	global $notations;
-
-	foreach ($notations['pmw']['progs'] as $key => $value)
-		$settings[$key] = $value;
+	foreach (self::$notation_data['progs'] as $setting_name => $progdata )
+		$settings[$setting_name] = $progdata;
 }
 
 /**
@@ -159,9 +169,7 @@ public static function define_setting_type ($settings)
  */
 public static function define_setting_value ($settings)
 {
-	global $notations;
-
-	foreach ( $notations['pmw']['progs'] as $setting_name => $progdata )
+	foreach ( self::$notation_data['progs'] as $setting_name => $progdata )
 	{
 		$binary_name = $progdata['prog_name'];
 		if ( is_windows() ) $binary_name .= '.exe';
